@@ -295,6 +295,7 @@ Experience_Values:
         Jungle_Log: 100
         Acacia_Log: 90
         Dark_Oak_Log: 90
+        Pale_Oak_Log: 130
         Stripped_Oak_Log: 70
         Stripped_Cherry_Log: 105
         Stripped_Spruce_Log: 80
@@ -302,6 +303,7 @@ Experience_Values:
         Stripped_Jungle_Log: 100
         Stripped_Acacia_Log: 90
         Stripped_Dark_Oak_Log: 90
+        Stripped_Pale_Oak_Log: 130
         Stripped_Oak_Wood: 70
         Stripped_Cherry_Wood: 70
         Stripped_Spruce_Wood: 80
@@ -309,6 +311,7 @@ Experience_Values:
         Stripped_Jungle_Wood: 100
         Stripped_Acacia_Wood: 90
         Stripped_Dark_Oak_Wood: 90
+        Stripped_Pale_Oak_Wood: 90
         Stripped_Mangrove_Log: 110
         Stripped_Crimson_Stem: 50
         Stripped_Warped_Stem: 50
@@ -319,6 +322,7 @@ Experience_Values:
         Jungle_Wood: 70
         Acacia_Wood: 70
         Dark_Oak_Wood: 70
+        Pale_Oak_Wood: 110
         Mangrove_Wood: 80
         Mangrove_Log: 95
         Mangrove_Roots: 10
