@@ -1,5 +1,13 @@
 Version 2.2.029
     Fixed bug where block checks at world height would throw IndexOutOfBounds exceptions
+    Added misc compatability for the "The Garden Awakens" Minecraft Update
+    Added Pale_Oak_Log to experience.yml for Woodcutting
+    Added Pale_Oak_Wood to experience.yml for Woodcutting
+    Added Stripped_Pale_Oak_Log to experience.yml for Woodcutting
+    Added Stripped_Pale_Oak_Wood to experience.yml for Woodcutting
+    Added Bonus_Drops.Woodcutting.Pale_Oak_Wood to config.yml to enable double/triple drops for Pale Oak Wood
+    Added Bonus_Drops.Woodcutting.Pale_Oak_Log to config.yml to enable double/triple drops for Pale Oak Log
+
 
 Version 2.2.028
     Fixed stack overflow during ChunkUnloadEvent
